[tool.poetry]
name = "data_validation"
version = "0.1.0"
description = ""
authors = ["Yujikawa <ykyujikawa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.72.0"
jupyterlab = "^2.2"
pandas-profiling = "^2.9"
pandas = "^1.1"
ipywidgets = "^7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
